[package]
name = "vtd-metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
hex = "0.4.3"
log = "0.4"
obfstr = "0.4.4"
rand = "=0.6.4"                                        # required by rsa
rand_chacha = { version = "=0.3.1" }                   # required by rsa
rsa = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
thiserror = "2.0.17"
ureq = { version = "3.1.2", features = ["json"] }
uuid = "1.18.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[dev-dependencies]
env_logger = "0.11.8"
