[package]
name = "driver-usermode"
version = "0.1.0"
edition = "2021"
description = "Valthrun driver user mode interface implementation"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
lazy_static = "1.5.0"
vtd-protocol = { version = "0.1.0", path = "../../crates/vtd-protocol" }
log = "0.4.27"
anyhow = "1.0.98"
env_logger = "0.11.8"
