[package]
name = "driver-usermode"
version = "0.1.1"
edition = "2021"
description = "Valthrun driver user mode interface implementation"

[lib]
crate-type = ["cdylib"]

[dependencies]
vtd-protocol = { version = "*", path = "../../crates/vtd-protocol" }
vtd-metrics = { version = "*", path = "../../crates/vtd-metrics" }

windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
lazy_static = "1.5.0"
log = "0.4.27"
anyhow = "1.0.98"
env_logger = "0.11.8"
ureq = "3.1.2"
